2010-01-05  Robert Millan  <rmh.grub@aybabtu.com>

	* config.rpath: Update from Gnulib.

2010-01-05  Yves Blusseau  <blusseau@zetam.org>

	* commands/acpi.c (grub_acpi_create_ebda): fix incorrect message.

2010-01-05  Yves Blusseau  <yves.blusseau@zetam.org>

	* util/sparc64/ieee1275/grub-mkimage.c (main): Typo fix.

2010-01-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/mkisofs/write.c (padblock_write): Switch size and nmemb
	arguments to fread so that we get a return value in bytes, rather
	than something that will normally be rounded down to 0.
	Adjust error handling to avoid producing garbage when size_t is not
	the same size as long long.

2010-01-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/mkisofs/write.c (padblock_write): Check return value of
	fread.

2010-01-05  Robert Millan  <rmh.grub@aybabtu.com>

	Remove grub-mkfloppy.  Images produced by grub-mkrescue are valid
	floppy images now.

	* util/i386/pc/grub-mkfloppy.in: Remove.  Update all users.

2010-01-04  Robert Millan  <rmh.grub@aybabtu.com>

	* disk/i386/pc/biosdisk.c (grub_biosdisk_rw): Use ALIGN_UP macro
	instead of manual alignment.
	* kern/disk.c (grub_disk_read): Remove grub_dprintf call (excessively
	verbose).  Avoid attempts to read past end of the device
	(grub_disk_adjust_range() guarantees that we can read `size' bytes,
	but GRUB_DISK_CACHE_SIZE may exceed that).

2010-01-04  Robert Millan  <rmh.grub@aybabtu.com>

	* commands/crc.c (grub_cmd_crc): Abort on read errors.
	* fs/iso9660.c (grub_iso9660_read): Check for read error and pass
	it to upper layer.

2010-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (GRUB_EFI_PIWG_DEVICE_PATH_SUBTYPE):
	New constant.
	(grub_efi_piwg_device_path): New structure
	(grub_efi_piwg_device_path_t): New type.
	* loader/efi/appleloader.c (piwg_full_device_path): New structure.
	(devpath_1): Transform to a structure. All users updated.
	(devpath_2): Likewise.
	(devpath_3): Likewise.
	(devpath_4): Likewise.