@@ -2,4 +2,5 @@
 #define FUNC_NAME grub_search_fs_file
 #define COMMAND_NAME "search.file"
 #define SEARCH_TARGET "file"
+#define HELP_MESSAGE N_("Search devices by file. If VARIABLE is specified, the first device found is set to a variable.")
 #include "search.c"
